--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@mcp-app-conductor/contracts": "workspace:*",
+    "@modelcontextprotocol/sdk": "^1.25.2",
     "mcp-app-conductor": "workspace:*"
   },
   "devDependencies": {
