update cli, runtime, etc... to comply with new schema updates and strictness
Signed-off-by: duke from earth <11495234+dukefromearth@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "typecheck": "pnpm -r --filter \"./packages/**\" --if-present typecheck",
     "dev:host": "pnpm --filter @mcp-app-conductor/canvas-host dev",
     "dev:cli": "pnpm --filter @mcp-app-conductor/cli build && node ./packages/cli/dist/index.js dev"
+  },
+  "devDependencies": {
+    "dependency-cruiser": "^17.3.8"
   }
 }
