harden dependency cruiser and documentation against being stale.
Signed-off-by: duke from earth <11495234+dukefromearth@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ node_modules
 dist
 packages/*/dist
 examples/*/dist
+docs/architecture/graphs/*.mmd
+docs/architecture/graphs/*.svg
+docs/architecture/graphs/*.html
+docs/architecture/graphs/*.json
